BISON/P_3/third.output
Grammar

    0 $accept: start $end

    1 start: Z

    2 Z: S

    3 S: "if" E "then" S "else" S
    4  | "if" E "then" S
    5  | "inst"

    6 E: "id"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "id" (258) 6
    "if" (259) 3 4
    "else" (260) 3
    "then" (261) 3 4
    "inst" (262) 5


Nonterminals, with rules where they appear

    $accept (8)
        on left: 0
    start (9)
        on left: 1
        on right: 0
    Z (10)
        on left: 2
        on right: 1
    S (11)
        on left: 3 4 5
        on right: 2 3 4
    E (12)
        on left: 6
        on right: 3 4


State 0

    0 $accept: • start $end

    "if"    shift, and go to state 1
    "inst"  shift, and go to state 2

    start  go to state 3
    Z      go to state 4
    S      go to state 5


State 1

    3 S: "if" • E "then" S "else" S
    4  | "if" • E "then" S

    "id"  shift, and go to state 6

    E  go to state 7


State 2

    5 S: "inst" •

    $default  reduce using rule 5 (S)


State 3

    0 $accept: start • $end

    $end  shift, and go to state 8


State 4

    1 start: Z •

    $default  reduce using rule 1 (start)


State 5

    2 Z: S •

    $default  reduce using rule 2 (Z)


State 6

    6 E: "id" •

    $default  reduce using rule 6 (E)


State 7

    3 S: "if" E • "then" S "else" S
    4  | "if" E • "then" S

    "then"  shift, and go to state 9


State 8

    0 $accept: start $end •

    $default  accept


State 9

    3 S: "if" E "then" • S "else" S
    4  | "if" E "then" • S

    "if"    shift, and go to state 1
    "inst"  shift, and go to state 2

    S  go to state 10


State 10

    3 S: "if" E "then" S • "else" S
    4  | "if" E "then" S •

    "else"  shift, and go to state 11

    $default  reduce using rule 4 (S)


State 11

    3 S: "if" E "then" S "else" • S

    "if"    shift, and go to state 1
    "inst"  shift, and go to state 2

    S  go to state 12


State 12

    3 S: "if" E "then" S "else" S •

    $default  reduce using rule 3 (S)
